
2019-05-31  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y (restore_backup_pos): extracted for common use
	* parser.y (evaluate_when_list), typeck.c (build_evaluate): assign and
	  use position of the WHEN clause for better error handling
	* flag.def: don't suppress static call flags in help

2019-05-20  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: setting of YFLAGS by configure instead of fixed AM_YFLAGS

2019-04-28  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y (line_keyword_clause): added missing RW line syntax variants
	* parser.y (_acu_size): initial parsing for size specification on pointers

2019-04-15  Simon Sobisch <simonsobisch@gnu.org>

	* tree.c: removed superfluous inline prototypes for cb_ref/cb_try_ref

2019-04-07  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am (COBC): use pre-inst-env ensuring to use the built version
	* parser.y, typeck.c, tree.h, config.def: FR #354 added CONTINUE AFTER
	  to suspend runtime execution
	* parser.y (begin_statement_from_backup_pos): new function used for postponed
	  statement start

2019-03-26  Simon Sobisch <simonsobisch@gnu.org>

	* tree.c, tree.h: added cb_int7, cb_int8, cb_int16
	* parser.y: replaced cb_int(0,4,8,16) by pre-created cb_int0-cb_int16
	* typeck.c (cb_emit_open): replaced comparison of cached cb_int to compare
	  the actual integer value
	* tree.c (cb_int): minimized struct int_node and access providing minimal
	  speed for integer lookup and minimal less memory consumption
	* tree.c (cb_int_hex): fixed to not adjust hex-attribute of cached integers
	  by using a different cache
	* codgen.c, tree.c, tree.h: deactivated hex-attribute of CB_INTEGER for now
	  (marked with USE_INT_HEX) as this increases the struct and we *should*
	  pass the flags as constants in any case
	* tree.c (cb_int, cb_int_hex): disabled caching of integer values (other
	  than 0-8) for now (test, reactivate by defining CACHED_INTEGERS=1) as the