@@ -218,8 +218,10 @@ constant-78:				ok
 constant-01:				unconformable
 perform-varying-without-by:		unconformable
 program-prototypes:			unconformable
-reference-out-of-declaratives:		ok
 numeric-value-for-edited-item:		error # not verified yet
+reference-out-of-declaratives:		ok
+call-convention-mnemonic:		unconformable
+call-convention-linkage:		unconformable
 incorrect-conf-sec-order:		error
 define-constant-directive:		unconformable
 free-redefines-position:		unconformable
