@@ -213,8 +213,10 @@ renames-uncommon-levels:		unconformable
 constant-78:				unconformable
 constant-01:				ok
 perform-varying-without-by:		ok
-program-prototypes:			ok
 reference-out-of-declaratives:		error
+program-prototypes:			ok
+call-convention-mnemonic:		unconformable
+call-convention-linkage:		unconformable
 numeric-value-for-edited-item:		error
 incorrect-conf-sec-order:		error
 define-constant-directive:		error
