@@ -213,8 +213,10 @@ symbolic-constant:			unconformable
 constant-78:				unconformable
 constant-01:				unconformable
 perform-varying-without-by:		unconformable
-program-prototypes:			unconformable
 reference-out-of-declaratives:		error  # not verified yet
+program-prototypes:			unconformable
+call-convention-mnemonic:		unconformable
+call-convention-linkage:		unconformable
 numeric-value-for-edited-item:		error
 incorrect-conf-sec-order:		error
 define-constant-directive:		error
