@@ -222,8 +222,10 @@ symbolic-constant:			ok
 constant-78:				ok
 constant-01:				ok
 perform-varying-without-by:		ok
-program-prototypes:			ok
 reference-out-of-declaratives:		warning
+program-prototypes:			ok
+call-convention-mnemonic:		ok
+call-convention-linkage:		ok
 numeric-value-for-edited-item:		ok
 incorrect-conf-sec-order:		ok
 define-constant-directive:		archaic
