@@ -216,8 +216,10 @@ symbolic-constant:			unconformable
 constant-78:				ok
 constant-01:				unconformable
 perform-varying-without-by:		unconformable
-program-prototypes:			ok
 reference-out-of-declaratives:		warning  # not verified yet
+program-prototypes:			ok
+call-convention-mnemonic:		ok
+call-convention-linkage:		unconformable
 numeric-value-for-edited-item:		error
 incorrect-conf-sec-order:		ok
 define-constant-directive:		unconformable
