@@ -220,8 +220,10 @@ symbolic-constant:			unconformable
 constant-78:				ok
 constant-01:				unconformable
 perform-varying-without-by:		unconformable
-program-prototypes:			unconformable
 reference-out-of-declaratives:		error  # TO-DO: error when referring to non-USE-statement DECLARATIVE sections
+program-prototypes:			unconformable
+call-convention-mnemonic:		unconformable  # not verified yet
+call-convention-linkage:		unconformable  # not verified yet
 numeric-value-for-edited-item:		error
 incorrect-conf-sec-order:		error
 define-constant-directive:		unconformable
