@@ -487,8 +487,10 @@ test.conf: missing definitions:
 	no definition of 'constant-78'
 	no definition of 'constant-01'
 	no definition of 'perform-varying-without-by'
-	no definition of 'program-prototypes'
 	no definition of 'reference-out-of-declaratives'
+	no definition of 'program-prototypes'
+	no definition of 'call-convention-mnemonic'
+	no definition of 'call-convention-linkage'
 	no definition of 'numeric-value-for-edited-item'
 	no definition of 'incorrect-conf-sec-order'
 	no definition of 'define-constant-directive'
