@@ -3576,7 +3576,7 @@ AT_CLEANUP
 
 
 AT_SETUP([CALL C with callback, PROCEDURE DIVISION EXTERN])
-AT_KEYWORDS([runmisc extensions call-convention])
+AT_KEYWORDS([runmisc extensions CALL-CONVENTION])
 
 AT_DATA([prog.cob], [
        IDENTIFICATION   DIVISION.
@@ -3643,7 +3643,7 @@ AT_CLEANUP
 
 
 AT_SETUP([CALL C with callback, ENTRY-CONVENTION EXTERN])
-AT_KEYWORDS([runmisc])
+AT_KEYWORDS([runmisc CALL-CONVENTION LINKAGE])
 
 AT_DATA([prog.cob], [
        IDENTIFICATION   DIVISION.
@@ -3704,6 +3704,90 @@ cprog (void *cb)
 ]])
 
 AT_CHECK([$COMPILE -Wno-unfinished -o prog prog.cob cprog.c], [0], [], [])
+AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [], [])
+
+AT_DATA([prog2.cob], [
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      prog.
+       DATA             DIVISION.
+       WORKING-STORAGE  SECTION.
+       01 CB            USAGE PROGRAM-POINTER.
+       PROCEDURE        DIVISION.
+           SET CB TO ENTRY "callback"
+           CALL STATIC "cprog" USING BY VALUE CB
+           END-CALL
+           EXIT PROGRAM.
+       END PROGRAM prog.
+
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      callback.
+       DATA             DIVISION.
+       LINKAGE          SECTION.
+       01 P1            USAGE POINTER.
+       01 P2            USAGE BINARY-LONG.
+       01 P3            PIC X(8).
+       PROCEDURE        DIVISION WITH C LINKAGE
+                        USING BY VALUE P1 P2 BY REFERENCE P3.
+           IF P1 NOT EQUAL ADDRESS OF P3
+              DISPLAY P1
+              END-DISPLAY
+           END-IF
+           IF P2 NOT EQUAL 42
+              DISPLAY P2
+              END-DISPLAY
+           END-IF
+           IF P3 NOT EQUAL "CALLBACK"
+              DISPLAY P3
+              END-DISPLAY
+           END-IF
+           EXIT PROGRAM.
+])
+
+AT_DATA([prog3.cob], [
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      prog.
+       DATA             DIVISION.
+       WORKING-STORAGE  SECTION.
+       01 CB            USAGE PROGRAM-POINTER.
+       PROCEDURE        DIVISION.
+           SET CB TO ENTRY "callback"
+           CALL STATIC "cprog" USING BY VALUE CB
+           END-CALL
+           EXIT PROGRAM.
+       END PROGRAM prog.
+
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      callback.
+       ENVIRONMENT DIVISION.
+       CONFIGURATION SECTION.
+       SPECIAL-NAMES.
+           CALL-CONVENTION 0 IS EXTERN.
+       DATA             DIVISION.
+       LINKAGE          SECTION.
+       01 P1            USAGE POINTER.
+       01 P2            USAGE BINARY-LONG.
+       01 P3            PIC X(8).
+       PROCEDURE        DIVISION EXTERN
+                        USING BY VALUE P1 P2 BY REFERENCE P3.
+           IF P1 NOT EQUAL ADDRESS OF P3
+              DISPLAY P1
+              END-DISPLAY
+           END-IF
+           IF P2 NOT EQUAL 42
+              DISPLAY P2
+              END-DISPLAY
+           END-IF
+           IF P3 NOT EQUAL "CALLBACK"
+              DISPLAY P3
+              END-DISPLAY
+           END-IF
+           EXIT PROGRAM.
+])
+
+AT_CHECK([$COMPILE -Wno-unfinished -o prog prog2.cob cprog.c], [0], [], [])
+AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [], [])
+
+AT_CHECK([$COMPILE -Wno-unfinished -o prog prog3.cob cprog.c], [0], [], [])
 AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [], [])
 
 AT_CLEANUP
