@@ -1,4 +1,9 @@
 
+2019-30-05 Simon Sobisch <simonsobisch@gnu.org>
+
+	* general: FR #311 added options call-convention-mnemonic and
+	  call-convention-linkage
+
 2019-05-11  Simon Sobisch <simonsobisch@gnu.org>
 
 	* default.conf, lax.conf-inc, mf-strict, rm-strict.conf:
